Added new tune of the week plus chords, updated some session links

--- a/chords.html
+++ b/chords.html
@@ -180,6 +180,10 @@
             >: March, G
           </li>
           <li class="tune-name">
+            <a href="./musicFiles/chords/metsakukkia-chords.html">Metsäkukkia</a
+            >: Waltz, Em
+          </li>
+          <li class="tune-name">
             <a href="./musicFiles/chords/musical-priest.html"
               >The Musical Priest</a
             >: Reel, Bm
