--- a/fridayTunes.html
+++ b/fridayTunes.html
@@ -86,28 +86,28 @@
           </li>
           <li class="tune-name">
             <a
-              href="https://dev.session.nz/tunes-archive/an-phis-fhliuch/"
+              href="https://irish.session.nz/tunes-archive/an-phis-fhliuch/"
               target="_blank"
               >An Phis Fluich</a
             >: Slip jig, Dmix
           </li>
           <li class="tune-name">
             <a
-              href="https://dev.session.nz/tunes-archive/banish-misfortune/"
+              href="https://irish.session.nz/tunes-archive/banish-misfortune/"
               target="_blank"
               >Banish Misfortune</a
             >: Jig, D mix
           </li>
           <li class="tune-name">
             <a
-              href="https://dev.session.nz/tunes-archive/banshee/"
+              href="https://irish.session.nz/tunes-archive/banshee/"
               target="_blank"
               >The Banshee</a
             >: Reel, G
           </li>
           <li class="tune-name">
             <a
-              href="https://dev.session.nz/tunes-archive/battering-ram/"
+              href="https://irish.session.nz/tunes-archive/battering-ram/"
               target="_blank"
               >The Battering Ram</a
             >: Jig, G
@@ -119,7 +119,7 @@
           </li>
           <li class="tune-name">
             <a
-              href="https://dev.session.nz/tunes-archive/billy-sullivan/"
+              href="https://irish.session.nz/tunes-archive/billy-sullivan/"
               target="_blank"
               >Bill Sullivan's</a
             >: Polka, A (or D)
@@ -158,21 +158,21 @@
           </li>
           <li class="tune-name">
             <a
-              href="https://dev.session.nz/tunes-archive/connachtmans-rambles/"
+              href="https://irish.session.nz/tunes-archive/connachtmans-rambles/"
               target="_blank"
               >Connaughtman's Rambles</a
             >: Jig, D
           </li>
           <li class="tune-name">
             <a
-              href="https://dev.session.nz/tunes-archive/crested-hens/"
+              href="https://irish.session.nz/tunes-archive/crested-hens/"
               target="_blank"
               >Crested Hens</a
             >: Waltz, Em dor
           </li>
           <li class="tune-name">
             <a
-              href="https://dev.session.nz/tunes-archive/dunmore-lasses/"
+              href="https://irish.session.nz/tunes-archive/dunmore-lasses/"
               target="_blank"
               >Dunmore Lasses</a
             >: Reel, Em
@@ -184,7 +184,7 @@
           </li>
           <li class="tune-name">
             <a
-              href="https://dev.session.nz/tunes-archive/farewell-to-whalley-range/"
+              href="https://irish.session.nz/tunes-archive/farewell-to-whalley-range/"
               target="_blank"
               >Farewell To Whalley Range</a
             >: Slip jig, F#m
@@ -196,7 +196,7 @@
           </li>
           <li class="tune-name">
             <a
-              href="https://dev.session.nz/tunes-archive/finnish-polka/"
+              href="https://irish.session.nz/tunes-archive/finnish-polka/"
               target="_blank"
               >The Finnish</a
             >: Polka, Bm dor
@@ -210,21 +210,21 @@
           </li>
           <li class="tune-name">
             <a
-              href="https://dev.session.nz/tunes-archive/franks-reel/"
+              href="https://irish.session.nz/tunes-archive/franks-reel/"
               target="_blank"
               >Frank's</a
             >: Reel, A
           </li>
           <li class="tune-name">
             <a
-              href="https://dev.session.nz/tunes-archive/green-cake/"
+              href="https://irish.session.nz/tunes-archive/green-cake/"
               target="_blank"
               >The Green Cake</a
             >: Reel, A
           </li>
           <li class="tune-name">
             <a
-              href="https://dev.session.nz/tunes-archive/hag-at-the-churn/"
+              href="https://irish.session.nz/tunes-archive/hag-at-the-churn/"
               target="_blank"
               >The Hag At The Churn</a
             >: Jig, D mix
@@ -241,7 +241,7 @@
           </li>
           <li class="tune-name">
             <a
-              href="https://dev.session.nz/tunes-archive/jim-wards/"
+              href="https://irish.session.nz/tunes-archive/jim-wards/"
               target="_blank"
               >Jim Wards</a
             >: Jig, G
@@ -255,14 +255,14 @@
           </li>
           <li class="tune-name">
             <a
-              href="https://dev.session.nz/tunes-archive/kid-on-the-mountain/"
+              href="https://irish.session.nz/tunes-archive/kid-on-the-mountain/"
               target="_blank"
               >Kid On The Mountain</a
             >: Slip jig, Em
           </li>
           <li class="tune-name">
             <a
-              href="https://dev.session.nz/tunes-archive/lark-in-the-morning/"
+              href="https://irish.session.nz/tunes-archive/lark-in-the-morning/"
               target="_blank"
               >The Lark In The Morning</a
             >: Jig, D
@@ -279,7 +279,7 @@
           </li>
           <li class="tune-name">
             <a
-              href="https://dev.session.nz/tunes-archive/maid-behind-the-bar/"
+              href="https://irish.session.nz/tunes-archive/maid-behind-the-bar/"
               target="_blank"
               >The Maid Behind The Bar</a
             >: Reel, D
@@ -296,7 +296,7 @@
           </li>
           <li class="tune-name">
             <a
-              href="https://dev.session.nz/tunes-archive/morrisons/"
+              href="https://irish.session.nz/tunes-archive/morrisons/"
               target="_blank"
               >Morrison's</a
             >: Jig, Em dor
@@ -325,7 +325,7 @@
           </li>
           <li class="tune-name">
             <a
-              href="https://dev.session.nz/tunes-archive/pipe-on-the-hob/"
+              href="https://irish.session.nz/tunes-archive/pipe-on-the-hob/"
               target="_blank"
               >Pipe On The Hob</a
             >: Jig, Am dor
@@ -352,7 +352,7 @@
           </li>
           <li class="tune-name">
             <a
-              href="https://dev.session.nz/tunes-archive/reconciliation/"
+              href="https://irish.session.nz/tunes-archive/reconciliation/"
               target="_blank"
               >The Reconciliation</a
             >: Reel, A
@@ -364,7 +364,7 @@
           </li>
           <li class="tune-name">
             <a
-              href="https://dev.session.nz/tunes-archive/saddle-the-pony/"
+              href="https://irish.session.nz/tunes-archive/saddle-the-pony/"
               target="_blank"
               >Saddle The Pony</a
             >: Jig, G
@@ -391,7 +391,7 @@
           </li>
           <li class="tune-name">
             <a
-              href="https://dev.session.nz/tunes-archive/tripping-up-the-stairs/"
+              href="https://irish.session.nz/tunes-archive/tripping-up-the-stairs/"
               target="_blank"
               >Tripping Up The Stairs</a
             >: Jig, D
