--- a/sessionClass.html
+++ b/sessionClass.html
@@ -92,14 +92,12 @@
       <div class="tunes-week tunes-container">
         <h3 class="centered-content sub-heading">Tune of the week:</h3>
         <p class="tune-name">
-          <a href="./Tunes/marche-du-queteux-pomerleau.html"
-            >Marche du quêteux Pomerleau</a
-          >, <a href="./Tunes/metsakkukia.html">Metsäkukkia</a>
+          <a href="https://thesession.org/tunes/9196">Soggy's</a>,
+          <a href="https://thesession.org/tunes/73">The Musical Priest</a>
         </p>
         <h3 class="centered-content sub-heading">Up Next:</h3>
         <p class="tune-name">
-          <a href="https://thesession.org/tunes/9196">Soggy's</a>,
-          <a href="https://thesession.org/tunes/73">The Musical Priest</a>
+          <a href="./Tunes/sto-me-e-milo.html">Sto Me E Milo</a>
         </p>
       </div>
       <div>
@@ -130,7 +128,7 @@
           </li>
           <li class="tune-name">
             <a
-              href="https://dev.session.nz/tunes-archive/belltable-waltz/"
+              href="https://irish.session.nz/tunes-archive/belltable-waltz/"
               target="_blank"
               >Bell Table</a
             >: Waltz, D
@@ -152,21 +150,21 @@
           </li>
           <li class="tune-name">
             <a
-              href="https://dev.session.nz/tunes-archive/boys-of-blue-hill/"
+              href="https://irish.session.nz/tunes-archive/boys-of-blue-hill/"
               target="_blank"
               >The Boys Of Bluehill</a
             >: Hornpipe, D
           </li>
           <li class="tune-name">
             <a
-              href="https://dev.session.nz/tunes-archive/brian-borus-march-3-part/"
+              href="https://irish.session.nz/tunes-archive/brian-borus-march-3-part/"
               target="_blank"
               >Brian Boru's</a
             >: March, Am
           </li>
           <li class="tune-name">
             <a
-              href="https://dev.session.nz/tunes-archive/breetches-full-of-stitches/"
+              href="https://irish.session.nz/tunes-archive/britches-full-of-stitches/"
               target="_blank"
               >Britches Full Of Stitches</a
             >: Polka, A
@@ -202,7 +200,7 @@
           </li>
           <li class="tune-name">
             <a
-              href="https://dev.session.nz/tunes-archive/drowsy-maggie-cm/"
+              href="https://irish.session.nz/tunes-archive/drowsy-maggie-cm/"
               target="_blank"
               >Drowsy Maggie</a
             >: Reel, Em dor
@@ -224,7 +222,7 @@
           </li>
           <li class="tune-name">
             <a
-              href="https://dev.session.nz/tunes-archive/finnish-polka/"
+              href="https://irish.session.nz/tunes-archive/finnish-polka/"
               target="_blank"
               >The Finnish</a
             >: Polka, Bm
@@ -253,7 +251,7 @@
           </li>
           <li class="tune-name">
             <a
-              href="https://dev.session.nz/tunes-archive/green-cake/"
+              href="https://irish.session.nz/tunes-archive/green-cake/"
               target="_blank"
               >The Green Cake</a
             >: Reel, F#m
@@ -280,7 +278,7 @@
           </li>
           <li class="tune-name">
             <a
-              href="https://dev.session.nz/tunes-archive/josefins-waltz/"
+              href="https://irish.session.nz/tunes-archive/josefins-waltz/"
               target="_blank"
               >Josefin's Waltz</a
             >: Waltz, D
@@ -297,7 +295,7 @@
           </li>
           <li class="tune-name">
             <a
-              href="https://dev.session.nz/tunes-archive/king-of-the-fairies/"
+              href="https://irish.session.nz/tunes-archive/king-of-the-fairies/"
               target="_blank"
               >King Of The Fairies</a
             >: Hornpipe, Em dor
@@ -317,7 +315,7 @@
           </li>
           <li class="tune-name">
             <a
-              href="https://dev.session.nz/tunes-archive/maid-behind-the-bar/"
+              href="https://irish.session.nz/tunes-archive/maid-behind-the-bar/"
               target="_blank"
               >The Maid Behind The Bar</a
             >: Reel, D
@@ -326,6 +324,14 @@
             <a href="https://thesession.org/tunes/9002" target="_blank"
               >Maison De Glace</a
             >: Jig, D
+          </li>
+          <li class="tune-name">
+            <a href="./Tunes/marche-du-queteux-pomerleau.html"
+              >Marche du quêteux Pomerleau</a
+            >: March, G
+          </li>
+          <li class="tune-name">
+            <a href="./Tunes/metsakkukia.html">Metsäkukkia</a>: Waltz, Em
           </li>
           <li class="tune-name">
             <a href="https://thesession.org/tunes/880" target="_blank"
@@ -339,7 +345,7 @@
           </li>
           <li class="tune-name">
             <a
-              href="https://dev.session.nz/tunes-archive/off-to-california/"
+              href="https://irish.session.nz/tunes-archive/off-to-california/"
               target="_blank"
               >Off To California</a
             >: Hornpipe, D
@@ -363,7 +369,7 @@
           </li>
           <li class="tune-name">
             <a
-              href="https://dev.session.nz/tunes-archive/rights-of-man/"
+              href="https://irish.session.nz/tunes-archive/rights-of-man/"
               target="_blank"
               >The Rights Of Man</a
             >: Hornpipe, Em dor
@@ -380,7 +386,7 @@
           </li>
           <li class="tune-name">
             <a
-              href="https://dev.session.nz/tunes-archive/st-annes-reel/"
+              href="https://irish.session.nz/tunes-archive/st-annes-reel/"
               target="_blank"
               >St. Anne's Reel</a
             >: Reel, D
@@ -397,7 +403,7 @@
           </li>
           <li class="tune-name">
             <a
-              href="https://dev.session.nz/tunes-archive/sonnys-mazurka/"
+              href="https://irish.session.nz/tunes-archive/sonnys-mazurka/"
               target="_blank"
               >Sonny's Mazurka</a
             >: Mazurka, D
@@ -418,13 +424,16 @@
             >: Reel, Am
           </li>
           <li class="tune-name">
+            <a href="./Tunes/sto-me-e-milo.html">Sto Me E Milo</a>: Oro, A
+          </li>
+          <li class="tune-name">
             <a href="https://thesession.org/tunes/106" target="_blank"
               >The Swallowtail</a
             >: Jig, Em
           </li>
           <li class="tune-name">
             <a
-              href="https://dev.session.nz/tunes-archive/tripping-up-the-stairs/"
+              href="https://irish.session.nz/tunes-archive/tripping-up-the-stairs/"
               target="_blank"
               >Tripping Up The Stairs</a
             >: Jig, D
