--- a/sessionClass.html
+++ b/sessionClass.html
@@ -98,7 +98,7 @@
         <h3 class="centered-content sub-heading">Up Next:</h3>
         <p class="tune-name">
           <a href="./Tunes/sto-me-e-milo.html">Sto Me E Milo</a>,
-          <a href="./Tunes/l'orientale.html">L'Orientale</a>
+          <!-- <a href="./Tunes/l'orientale.html">L'Orientale</a> -->
         </p>
       </div>
       <div>
