Added new tunes for the week, updated resources

--- a/chords.html
+++ b/chords.html
@@ -126,7 +126,7 @@
           <li class="tune-name">
             <a href="./musicFiles/chords/farewell-to-whalley-range.html"
               >Farewell to Whalley Range</a
-            >: >: Slip Jig, F#m dor
+            >: Slip Jig, F#m dor
           </li>
           <li class="tune-name">
             <a href="./musicFiles/chords/finnish-polka.html">The Finnish</a>:
@@ -138,6 +138,10 @@
           <li class="tune-name">
             <a href="./musicFiles/chords/foxhunter.html">The Foxhunter</a>: Slip
             Jig, D
+          </li>
+          <li class="tune-name">
+            <a href="./musicFiles/chords/green-cake.html">The Green Cake</a>:
+            F#m dor
           </li>
           <li class="tune-name">
             <a href="./musicFiles/chords/humours-of-ballyloughlin.html"
@@ -157,6 +161,10 @@
             <a href="./musicFiles/chords/jump-at-the-sun.html"
               >Jump At The Sun</a
             >: Jig, Gm
+          </li>
+          <li class="tune-name">
+            <a href="./musicFiles/chords/kalamantianos.html">The Kalamatianos</a
+            >: G
           </li>
           <li class="tune-name">
             <a href="./musicFiles/chords/little-beggarman.html"
@@ -217,11 +225,20 @@
             >: Jig, D
           </li>
           <li class="tune-name">
+            <a href="./musicFiles/chords/seanamhac-tube-station.html"
+              >Seanamhac Tube Station</a
+            >: Reel, G dor
+          </li>
+          <li class="tune-name">
             <a href="./musicFiles/chords/spootiskerry.html">Spootiskerry</a>:
             Reel, G
           </li>
           <li class="tune-name">
             <a href="./musicFiles/chords/soggys.html">Soggy's</a>: Slip jig, A
+          </li>
+          <li class="tune-name">
+            <a href="./musicFiles/chords/sto-me-e-milo.html">Sto Me E Milo</a>:
+            A
           </li>
           <li class="tune-name">
             <a href="./musicFiles/chords/swallowtail.html">The Swallowtail</a>:
