--- a/resources.html
+++ b/resources.html
@@ -82,6 +82,9 @@
               href="https://www.youtube.com/channel/UCE_cHdA5wcltfuaXyK67GQw/featured"
               target="_blank"
               >Comhaltas Foinn Seisiun</a
+            >,
+            <a href="https://www.youtube.com/@MartinHayesFiddle/videos"
+              >Martin Hayes</a
             >
           </li>
           <li class="resource-content">
@@ -96,6 +99,9 @@
               href="https://www.youtube.com/@thegoodtunes/videos"
               target="blank"
               >The Good Tune</a
+            >,
+            <a href="https://www.youtube.com/@TheFolkMusicAcademy/videos"
+              >Folk Music Academy</a
             >
           </li>
           <!-- <li class="resource-content">
