--- a/sessionClass.html
+++ b/sessionClass.html
@@ -92,13 +92,16 @@
       <div class="tunes-week tunes-container">
         <h3 class="centered-content sub-heading">Tune of the week:</h3>
         <p class="tune-name">
-          <a href="https://thesession.org/tunes/9196">Soggy's</a>,
-          <a href="https://thesession.org/tunes/73">The Musical Priest</a>
+          <a href="./Tunes/sto-me-e-milo.html">Sto Me E Milo</a>,
+          <a href="./Tunes/kalamatianos.html">The Kalamatianos</a>
         </p>
         <h3 class="centered-content sub-heading">Up Next:</h3>
         <p class="tune-name">
-          <a href="./Tunes/sto-me-e-milo.html">Sto Me E Milo</a>,
-          <!-- <a href="./Tunes/l'orientale.html">L'Orientale</a> -->
+          Jigs - <a href="https://thesession.org/tunes/1080">Father O'Flynn</a>,
+          <a href="https://thesession.org/tunes/667">The Killavil</a>,
+          <a href="./Tunes/seanamhac-tube-station.html"
+            >Seanamhac Tube Station</a
+          >
         </p>
       </div>
       <div>
@@ -335,6 +338,11 @@
             <a href="./Tunes/metsakkukia.html">Metsäkukkia</a>: Waltz, Em
           </li>
           <li class="tune-name">
+            <a href="https://thesession.org/tunes/73" target="_blank"
+              >The Musical Priest</a
+            >: Reel, Bm
+          </li>
+          <li class="tune-name">
             <a href="https://thesession.org/tunes/880" target="_blank"
               >Da New Rigged Ship</a
             >: Reel or Hornpipe, A
@@ -401,6 +409,11 @@
             <a href="https://thesession.org/tunes/7905" target="_blank"
               >Shove The Pig's Foot A Little Closer To The Fire</a
             >: Reel, G
+          </li>
+          <li class="tune-name">
+            <a href="https://thesession.org/tunes/9196" target="_blank"
+              >Soggy's</a
+            >: Slip jig, A
           </li>
           <li class="tune-name">
             <a
