Edited Friday tunes page, updated Session class page for the week

--- a/fridayTunes.html
+++ b/fridayTunes.html
@@ -69,7 +69,9 @@
         <div class="text">
           <p>
             Here's a sample of some of the tunes played on Fridays at the Irish
-            Wolf. For the most part, only tunes that more than one of us play
+            Wolf. Other tunes include everything that can be found on the
+            <a href="sessionClass.html" class="tune-group">Session Class</a>
+            page. For the most part, only tunes that more than one of us play
             the melody have been included, so this isn't a comprehensive list of
             everyone’s repertoire who participates. We'll keep adding things to
             the list as we discover more shared repertoire and learn new tunes
@@ -79,11 +81,11 @@
       </div>
       <div class="tunes-list">
         <ul>
-          <li class="tune-name">
+          <!-- <li class="tune-name">
             <a href="https://thesession.org/tunes/14300" target="_blank"
               >Angeline The Baker</a
             >: Polka, D
-          </li>
+          </li> -->
           <li class="tune-name">
             <a
               href="https://irish.session.nz/tunes-archive/an-phis-fhliuch/"
@@ -117,39 +119,44 @@
               >Big Sciota</a
             >: Reel, G
           </li>
-          <li class="tune-name">
+          <!-- <li class="tune-name">
             <a
               href="https://irish.session.nz/tunes-archive/billy-sullivan/"
               target="_blank"
               >Bill Sullivan's</a
             >: Polka, A (or D)
-          </li>
+          </li> -->
           <li class="tune-name">
             <a href="https://thesession.org/tunes/5" target="_blank">
               The Blarney Pilgrim</a
             >: Jig, G
           </li>
-          <li class="tune-name">
+          <!-- <li class="tune-name">
             <a
               href="https://irish.session.nz/tunes-archive/breetches-full-of-stitches/"
               target="_blank"
               >The Britches Full Of Stitches</a
             >: Polka, A
-          </li>
+          </li> -->
           <li class="tune-name">
             <a href="https://thesession.org/tunes/15" target="_blank"
               >Calliope House</a
             >: Jig, D
           </li>
-          <li class="tune-name">
+          <!-- <li class="tune-name">
             <a href="https://thesession.org/tunes/703" target="_blank"
               >Catharsis</a
             >: Reel, Gm
-          </li>
+          </li> -->
           <li class="tune-name">
             <a href="https://thesession.org/tunes/15454" target="_blank"
               >Chinquapin Hunting</a
             >: Polka, A
+          </li>
+          <li class="tune-name">
+            <a href="https://thesession.org/tunes/1" target="_blank">
+              Cooley's </a
+            >: Reel, Em
           </li>
           <li class="tune-name">
             <a href="https://thesession.org/tunes/1244" target="_blank"
@@ -163,13 +170,13 @@
               >Connaughtman's Rambles</a
             >: Jig, D
           </li>
-          <li class="tune-name">
+          <!-- <li class="tune-name">
             <a
               href="https://irish.session.nz/tunes-archive/crested-hens/"
               target="_blank"
               >Crested Hens</a
             >: Waltz, Em dor
-          </li>
+          </li> -->
           <li class="tune-name">
             <a
               href="https://irish.session.nz/tunes-archive/dunmore-lasses/"
@@ -182,7 +189,7 @@
               >Dusty Windowsills</a
             >: Jig, Am dor
           </li>
-          <li class="tune-name">
+          <!-- <li class="tune-name">
             <a
               href="https://irish.session.nz/tunes-archive/farewell-to-whalley-range/"
               target="_blank"
@@ -193,8 +200,8 @@
             <a href="https://thesession.org/tunes/1080" target="_blank"
               >Father O'Flynn</a
             >: Jig, D
-          </li>
-          <li class="tune-name">
+          </li> -->
+          <!-- <li class="tune-name">
             <a
               href="https://irish.session.nz/tunes-archive/finnish-polka/"
               target="_blank"
@@ -207,7 +214,7 @@
               target="_blank"
               >Fisher's</a
             >: Hornpipe, D
-          </li>
+          </li> -->
           <li class="tune-name">
             <a
               href="https://irish.session.nz/tunes-archive/franks-reel/"
@@ -215,13 +222,13 @@
               >Frank's</a
             >: Reel, A
           </li>
-          <li class="tune-name">
+          <!-- <li class="tune-name">
             <a
               href="https://irish.session.nz/tunes-archive/green-cake/"
               target="_blank"
               >The Green Cake</a
             >: Reel, A
-          </li>
+          </li> -->
           <li class="tune-name">
             <a
               href="https://irish.session.nz/tunes-archive/hag-at-the-churn/"
@@ -229,11 +236,11 @@
               >The Hag At The Churn</a
             >: Jig, D mix
           </li>
-          <li class="tune-name">
+          <!-- <li class="tune-name">
             <a href="https://thesession.org/tunes/445" target="_blank"
               >Itzikel</a
             >: Frailach, Em
-          </li>
+          </li> -->
           <li class="tune-name">
             <a href="https://thesession.org/tunes/1812" target="_blank"
               >Jerusalem Ridge</a
@@ -246,13 +253,13 @@
               >Jim Wards</a
             >: Jig, G
           </li>
-          <li class="tune-name">
+          <!-- <li class="tune-name">
             <a
               href="https://irish.session.nz/tunes-archive/kesh-jig/"
               target="_blank"
               >The Kesh</a
             >: Jig, G
-          </li>
+          </li> -->
           <li class="tune-name">
             <a
               href="https://irish.session.nz/tunes-archive/kid-on-the-mountain/"
@@ -272,7 +279,7 @@
               >MacArthur Road</a
             >: Reel, E
           </li>
-          <li class="tune-name">
+          <!-- <li class="tune-name">
             <a href="https://thesession.org/tunes/7041" target="_blank"
               >Macedonian Oro</a
             >: Horo, A
@@ -288,6 +295,11 @@
             <a href="https://thesession.org/tunes/9002" target="_blank"
               >Maison De Glace</a
             >: Jig, D
+          </li> -->
+          <li class="tune-name">
+            <a href="https://thesession.org/tunes/70" target="_blank">
+              Merrily Kissed The Quaker </a
+            >: Slide, G
           </li>
           <li class="tune-name">
             <a href="https://thesession.org/tunes/72" target="_blank"
@@ -340,11 +352,11 @@
               >The Queen Of The Rushes</a
             >: Jig, D
           </li>
-          <li class="tune-name">
+          <!-- <li class="tune-name">
             <a href="https://thesession.org/tunes/86" target="_blank"
               >Rakish Paddy</a
             >: Reel, D mix
-          </li>
+          </li> -->
           <li class="tune-name">
             <a href="https://thesession.org/tunes/2639" target="_blank"
               >Ramnee Ceilidh</a
@@ -374,11 +386,11 @@
               >The Sally Gardens</a
             >: Reel, G
           </li>
-          <li class="tune-name">
+          <!-- <li class="tune-name">
             <a href="https://thesession.org/tunes/7905" target="_blank"
               >Shove The Pig's Foot A Little Closer To The Fire</a
             >: Reel, G
-          </li>
+          </li> -->
           <li class="tune-name">
             <a href="https://thesession.org/tunes/449" target="_blank"
               >Si Beag Si Mor</a
@@ -389,20 +401,22 @@
               >The Silver Spear</a
             >: Reel, D
           </li>
-          <li class="tune-name">
+          <!-- <li class="tune-name">
             <a
               href="https://irish.session.nz/tunes-archive/tripping-up-the-stairs/"
               target="_blank"
               >Tripping Up The Stairs</a
             >: Jig, D
-          </li>
+          </li> -->
           <li class="tune-name">
             <a href="https://thesession.org/tunes/602" target="_blank"
               >Whiskey Before Breakfast</a
             >: Reel, D
           </li>
           <li class="tune-name">
-            <a href="" target="_blank"></a>
+            <a href="https://thesession.org/tunes/116" target="_blank">
+              The Wind That Shakes The Barley </a
+            >: Reel, D
           </li>
         </ul>
       </div>
