--- a/sessionClass.html
+++ b/sessionClass.html
@@ -90,12 +90,7 @@
         </div>
       </div>
       <div class="tunes-week tunes-container">
-        <h3 class="centered-content sub-heading">Tune of the week:</h3>
-        <p class="tune-name">
-          <a href="./Tunes/sto-me-e-milo.html">Sto Me E Milo</a>,
-          <a href="./Tunes/kalamatianos.html">The Kalamatianos</a>
-        </p>
-        <h3 class="centered-content sub-heading">Up Next:</h3>
+        <h3 class="centered-content sub-heading">Tunes of the week:</h3>
         <p class="tune-name">
           Jigs - <a href="https://thesession.org/tunes/1080">Father O'Flynn</a>,
           <a href="https://thesession.org/tunes/667">The Killavil</a>,
@@ -103,6 +98,9 @@
             >Seanamhac Tube Station</a
           >
         </p>
+        <h3 class="centered-content sub-heading">Up Next:</h3>
+        <p class="tune-name">Review, performance 25/9/23 at 5:30pm</p>
+        <p class="tune-name">*No class Monday 2/10/23*</p>
       </div>
       <div>
         <h3 class="centered-content sub-heading">Session Class Repertoire:</h3>
@@ -289,6 +287,9 @@
           </li>
           <li class="tune-name">
             <a href="./Tunes/jump-at-the-sun.html">Jump At The Sun</a>: Jig, Gm
+          </li>
+          <li class="tune-name">
+            <a href="./Tunes/kalamatianos.html">The Kalamatianos</a>: Oro, G
           </li>
           <li class="tune-name">
             <a
