Added a few new chor charts and music links

--- a/musicFiles/chords/father-o'flynn.html
+++ b/musicFiles/chords/father-o'flynn.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Britches Full Of Stitches</title>
+    <title>Father O'Flynn</title>
     <link rel="stylesheet" href="../.././styles/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -57,22 +57,20 @@
       </ul>
     </header>
     <div class="tuneDescription text">
-      <p>
-        This is the basic outline that follows the melody as I've heard it most
-        commonly played.
-      </p>
+      <p></p>
     </div>
+
     <div class="sheetMusicContainer">
       <img
         class="img-tune"
-        src="../.././musicFiles/chords/chord-page/britches-full-of-stitches-chords.jpg"
+        src="../.././musicFiles/chords/chord-page/father-o'flynn.png"
         alt="Sheet music"
       />
     </div>
     <div class="musicPlayer">
       <iframe
         style="border-radius: 12px"
-        src="https://open.spotify.com/embed/track/6vxQPwfMWK0LBecBkjvwo5?utm_source=generator"
+        src="https://open.spotify.com/embed/track/5y2hTUNwIukxV8vPyeAKNR?utm_source=generator"
         width="100%"
         height="352"
         frameborder="0"
