--- a/musicFiles/chords/the-butterfly.html
+++ b/musicFiles/chords/the-butterfly.html
@@ -59,7 +59,11 @@
     <div class="tuneDescription text">
       <p>
         The original tune by Tommy Potts was unaccompanied, so anyone's chords
-        are up for interpretation on this one. Common substitutions include:
+        are up for interpretation on this one. The Bothy Band did a version that
+        is pretty popular for reference. Most people have their preferred
+        chords, so listen closely if you're playing with another accompanist so
+        you don't clash. Otherwise try things out and find a combo that you
+        like. Common substitutions include:
         <br />
         G and Em <br />
         Em and C <br />
