--- a/musicFiles/chords/the-killavil.html
+++ b/musicFiles/chords/the-killavil.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Britches Full Of Stitches</title>
+    <title>The Killavil</title>
     <link rel="stylesheet" href="../.././styles/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -58,21 +58,29 @@
     </header>
     <div class="tuneDescription text">
       <p>
-        This is the basic outline that follows the melody as I've heard it most
-        commonly played.
+        This is a pretty typical chord progression for a minor jig, consisting
+        of a minor 1 chord (Em) and a VII (D). The i and VII are the two most
+        common chords used in Irish minor tunes. A few substitutions in this
+        case could include: <br />Em and C <br />
+        D and Bm
+        <br />
+        For example, the first place to try a swap would be the second Em
+        (measures 5 and/or 13) with a C, and the D in measure 8 and 16 could be
+        replaced with a Bm.
       </p>
     </div>
+
     <div class="sheetMusicContainer">
       <img
         class="img-tune"
-        src="../.././musicFiles/chords/chord-page/britches-full-of-stitches-chords.jpg"
+        src="../.././musicFiles/chords/chord-page/the-killavil-chords.png"
         alt="Sheet music"
       />
     </div>
     <div class="musicPlayer">
       <iframe
         style="border-radius: 12px"
-        src="https://open.spotify.com/embed/track/6vxQPwfMWK0LBecBkjvwo5?utm_source=generator"
+        src="https://open.spotify.com/embed/track/0RYcRNP60FDiGwfPfSW8K3?utm_source=generator"
         width="100%"
         height="352"
         frameborder="0"
