--- a/chords.html
+++ b/chords.html
@@ -124,6 +124,10 @@
             Jig, D
           </li>
           <li class="tune-name">
+            <a href="./musicFiles/chords/father-o'flynn.html">Father O'Flynn</a
+            >: Jig, D
+          </li>
+          <li class="tune-name">
             <a href="./musicFiles/chords/farewell-to-whalley-range.html"
               >Farewell to Whalley Range</a
             >: Slip Jig, F#m dor
@@ -165,6 +169,10 @@
           <li class="tune-name">
             <a href="./musicFiles/chords/kalamantianos.html">The Kalamatianos</a
             >: G
+          </li>
+          <li class="tune-name">
+            <a href="./musicFiles/chords/the-killavil.html">The Killavil</a>:
+            Jig, Em
           </li>
           <li class="tune-name">
             <a href="./musicFiles/chords/little-beggarman.html"
