--- a/musicFiles/chords/ballydesmond.html
+++ b/musicFiles/chords/ballydesmond.html
@@ -69,5 +69,17 @@
         alt="Sheet music"
       />
     </div>
+    <div class="musicPlayer">
+      <iframe
+        style="border-radius: 12px"
+        src="https://open.spotify.com/embed/track/09WIZ33EpEVNJ4syD9mXZy?utm_source=generator"
+        width="100%"
+        height="352"
+        frameborder="0"
+        allowfullscreen=""
+        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+        loading="lazy"
+      ></iframe>
+    </div>
   </body>
 </html>
