Added new upcoming tune and chords

--- a/sessionClass.html
+++ b/sessionClass.html
@@ -99,8 +99,11 @@
           >
         </p>
         <h3 class="centered-content sub-heading">Up Next:</h3>
-        <p class="tune-name">Review, performance 25/9/23 at 5:30pm</p>
-        <p class="tune-name">*No class Monday 2/10/23*</p>
+        <p class="tune-name">
+          <a href="./Tunes/slangpolska-efter-byss-calle.html"
+            >Slängpolska efter Byss-Calle</a
+          >
+        </p>
       </div>
       <div>
         <h3 class="centered-content sub-heading">Session Class Repertoire:</h3>
