--- a/chords.html
+++ b/chords.html
@@ -238,6 +238,12 @@
             >: Reel, G dor
           </li>
           <li class="tune-name">
+            <a
+              href="./musicFiles/chords/slangpolska-efter-byss-calle-chords.html"
+              >Slängpolska efter Byss-Calle</a
+            >: Polska, G
+          </li>
+          <li class="tune-name">
             <a href="./musicFiles/chords/spootiskerry.html">Spootiskerry</a>:
             Reel, G
           </li>
