Added new tune of the week with chord page

--- a/chords.html
+++ b/chords.html
@@ -238,6 +238,11 @@
             >: Reel, G dor
           </li>
           <li class="tune-name">
+            <a href="./musicFiles/chords/shalom-aleichem.html"
+              >Shalom Aleichem</a
+            >: Am
+          </li>
+          <li class="tune-name">
             <a
               href="./musicFiles/chords/slangpolska-efter-byss-calle-chords.html"
               >Slängpolska efter Byss-Calle</a
