--- a/sessionClass.html
+++ b/sessionClass.html
@@ -92,17 +92,13 @@
       <div class="tunes-week tunes-container">
         <h3 class="centered-content sub-heading">Tunes of the week:</h3>
         <p class="tune-name">
-          Jigs - <a href="https://thesession.org/tunes/1080">Father O'Flynn</a>,
-          <a href="https://thesession.org/tunes/667">The Killavil</a>,
-          <a href="./Tunes/seanamhac-tube-station.html"
-            >Seanamhac Tube Station</a
+          <a href="./Tunes/slangpolska-efter-byss-calle.html"
+            >Slängpolska efter Byss-Calle</a
           >
         </p>
         <h3 class="centered-content sub-heading">Up Next:</h3>
         <p class="tune-name">
-          <a href="./Tunes/slangpolska-efter-byss-calle.html"
-            >Slängpolska efter Byss-Calle</a
-          >
+          <a href="./Tunes/shalom-aleichem.html">Shalom Aleichem</a>
         </p>
       </div>
       <div>
@@ -226,6 +222,11 @@
             >: Slip jig, F#m
           </li>
           <li class="tune-name">
+            <a href="https://thesession.org/tunes/1080" target="_blank"
+              >Father O'Flynn</a
+            >: Jig, D
+          </li>
+          <li class="tune-name">
             <a
               href="https://irish.session.nz/tunes-archive/finnish-polka/"
               target="_blank"
@@ -300,6 +301,11 @@
               target="_blank"
               >The Kesh</a
             >: Jig, G
+          </li>
+          <li class="tune-name">
+            <a href="https://thesession.org/tunes/667" target="_blank"
+              >The Killavil</a
+            >: Jig, Em
           </li>
           <li class="tune-name">
             <a
@@ -403,6 +409,11 @@
               target="_blank"
               >St. Anne's Reel</a
             >: Reel, D
+          </li>
+          <li class="tune-name">
+            <a href="./Tunes/seanamhac-tube-station.html"
+              >Seanamhac Tube Station</a
+            >: Jig, Gm
           </li>
           <li class="tune-name">
             <a href="https://thesession.org/tunes/2320" target="_blank"
