--- a/chords.html
+++ b/chords.html
@@ -214,6 +214,11 @@
             Freygish
           </li>
           <li class="tune-name">
+            <a href="./musicFiles/chords/over-the-moor-to-maggie-chords.html"
+              >Over The Moor To Maggie</a
+            >: Reel, G
+          </li>
+          <li class="tune-name">
             <a href="./musicFiles/chords/push-the-pigs-foot.html"
               >Push That Pig's Foot A Little Further In The Fire</a
             >: Reel, G
