--- a/sessionClass.html
+++ b/sessionClass.html
@@ -92,13 +92,13 @@
       <div class="tunes-week tunes-container">
         <h3 class="centered-content sub-heading">Tunes of the week:</h3>
         <p class="tune-name">
-          <a href="./Tunes/slangpolska-efter-byss-calle.html"
-            >Slängpolska efter Byss-Calle</a
-          >
+          <a href="./Tunes/shalom-aleichem.html">Shalom Aleichem</a>
         </p>
         <h3 class="centered-content sub-heading">Up Next:</h3>
         <p class="tune-name">
-          <a href="./Tunes/shalom-aleichem.html">Shalom Aleichem</a>
+          <a href="./Tunes/over-the-moor-to-maggie.html"
+            >Over The Moor To Maggie</a
+          >
         </p>
       </div>
       <div>
@@ -424,6 +424,11 @@
             <a href="https://thesession.org/tunes/7905" target="_blank"
               >Shove The Pig's Foot A Little Closer To The Fire</a
             >: Reel, G
+          </li>
+          <li class="tune-name">
+            <a href="./Tunes/slangpolska-efter-byss-calle.html"
+              >Slängpolska efter Byss-Calle</a
+            >: Polska, G
           </li>
           <li class="tune-name">
             <a href="https://thesession.org/tunes/9196" target="_blank"
