Updated Friday tunes

--- a/fridayTunes.html
+++ b/fridayTunes.html
@@ -68,14 +68,15 @@
       <div class="container-content cc-tunes">
         <div class="text">
           <p>
-            Here's a sample of some of the tunes played on Fridays at the Irish
-            Wolf. Other tunes include everything that can be found on the
+            Here's a sample of some of the things we used to play for 'Fridays
+            Tunes', including everything that can be found on the
             <a href="sessionClass.html" class="tune-group">Session Class</a>
             page. For the most part, only tunes that more than one of us play
             the melody have been included, so this isn't a comprehensive list of
             everyone’s repertoire who participates. We'll keep adding things to
             the list as we discover more shared repertoire and learn new tunes
-            together.
+            together. We're not playing in the public on Fridays at the moment,
+            but stay tuned as things unfold.
           </p>
         </div>
       </div>
