--- a/tunes.html
+++ b/tunes.html
@@ -64,9 +64,9 @@
       <div class="container-content cc-tunes">
         <div class="text">
           <a href="sessionClass.html" class="group">Session Class</a>: These are
-          the tunes that we've taught each other and played together at the
-          Monday Session Class at the Old Library. They're a good starting point
-          for those just beginning their journey with trad music, however these
+          the tunes that we've taught each other and play together at the Monday
+          Session Class at the Old Library. They're a good starting point for
+          those just beginning their journey with trad music, however these
           tunes are not 'just' for beginners! It's also a resource for those
           who'd like to learn the local repertoire. Hopefully we'll learn each
           other's tunes and have a lot to play when we come together. Keep an
@@ -75,12 +75,12 @@
           stay current with the community repertoire.
           <br />
           <br />
-          <a href="fridayTunes.html" class="group">Friday Tunes</a>: These tunes
+          <!-- <a href="fridayTunes.html" class="group">Friday Tunes</a>: These tunes
           are a bit more diverse and cover most of what's been played at Friday
           Tune Time at the Irish Wolf. They're not necessarily more challenging
           to execute but do tend to get played at full speed with variations and
           ornamentation. We encourage you to make them part of your repertoire
-          and possibly join us sometime!
+          and possibly join us sometime! -->
         </div>
       </div>
     </div>
