Made a few edits and corrections

--- a/sessionClass.html
+++ b/sessionClass.html
@@ -416,6 +416,9 @@
             >: Jig, Gm
           </li>
           <li class="tune-name">
+            <a href="./Tunes/shalom-aleichem.html">Shalom Aleichem</a>: Am
+          </li>
+          <li class="tune-name">
             <a href="https://thesession.org/tunes/2320" target="_blank"
               >Shoe The Donkey</a
             >: Mazurka, G
@@ -443,14 +446,14 @@
             >: Mazurka, D
           </li>
           <li class="tune-name">
-            <a href="https://thesession.org/tunes/857" target="_blank"
-              >Spootiskerry</a
-            >: Reel, G
-          </li>
-          <li class="tune-name">
             <a href="https://thesession.org/tunes/601" target="_blank"
               >The South Wind</a
             >: Waltz, G
+          </li>
+          <li class="tune-name">
+            <a href="https://thesession.org/tunes/857" target="_blank"
+              >Spootiskerry</a
+            >: Reel, G
           </li>
           <li class="tune-name">
             <a href="https://thesession.org/tunes/197" target="_blank"
