--- a/index.html
+++ b/index.html
@@ -59,18 +59,19 @@
       <div class="container-content cc-home">
         <p class="text">
           Welcome! We’re a collection of musos in the Whangarei area who enjoy
-          playing acoustic trad folk and roots music. We host a weekly
+          playing acoustic trad folk and roots music. We currently host a weekly
           <a href="sessionClass.html" class="tune-group">Session Class</a> that
-          teaches tunes, musicianship and etiquette. We also host
-          <a href="fridayTunes.html" class="tune-group">Friday Tunes</a>
-          showcasing a more diverse repertoire played at an advanced level,
-          including new and old tunes from around the world. This site is a
-          place to discover new music and to grow a common repertoire in the
-          community. There are many standards included here, as well as unique
-          and interesting pieces that are reflective of our individual tastes
-          and backgrounds. We are fortunate for all of the great resources out
-          there today for learning music, so explore, expand, and we hope see
-          you out there!
+          teaches tunes, musicianship and etiquette.
+          <!-- We also host
+          <a href="fridayTunes.html" class="tune-group">Friday Tunes</a> 
+          Occasionally we present a public offering showcasing a more diverse repertoire played at an advanced level,
+          including new and old tunes from around the world. -->
+          This site is a place to discover new music and to grow a common
+          repertoire in the community. There are many standards included here,
+          as well as unique and interesting pieces that are reflective of our
+          individual tastes and backgrounds. We are fortunate for all of the
+          great resources out there today for learning music, so explore,
+          expand, and we hope see you out there!
         </p>
       </div>
     </div>
