Added new tune of the week plus chords

--- a/chords.html
+++ b/chords.html
@@ -76,6 +76,10 @@
             >: Reel, D
           </li>
           <li class="tune-name">
+            <a href="./musicFiles/chords/antin-mikko-chords.html">Antin Mikko</a
+            >: Polska, A
+          </li>
+          <li class="tune-name">
             <a href="./musicFiles/chords/ballydesmond.html"
               >The Ballydesmond (#2)</a
             >: Polka, Am dor
