--- a/sessionClass.html
+++ b/sessionClass.html
@@ -92,13 +92,13 @@
       <div class="tunes-week tunes-container">
         <h3 class="centered-content sub-heading">Tunes of the week:</h3>
         <p class="tune-name">
-          <a href="./Tunes/shalom-aleichem.html">Shalom Aleichem</a>
-        </p>
-        <h3 class="centered-content sub-heading">Up Next:</h3>
-        <p class="tune-name">
           <a href="./Tunes/over-the-moor-to-maggie.html"
             >Over The Moor To Maggie</a
           >
+        </p>
+        <h3 class="centered-content sub-heading">Up Next:</h3>
+        <p class="tune-name">
+          <a href="./Tunes/antin-miko.html">Antin Miko</a>
         </p>
       </div>
       <div>
@@ -375,6 +375,11 @@
               target="_blank"
               >Out On The Ocean</a
             >: Jig, G
+          </li>
+          <li class="tune-name">
+            <a href="./Tunes/over-the-moor-to-maggie.html"
+              >Over The Moor To Maggie</a
+            >: Reel, G
           </li>
           <li class="tune-name">
             <a href="https://thesession.org/tunes/85" target="_blank"
